<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/text_restaurant_info_rating"
    >

    <TextView
        android:id="@+id/review_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/hint_review_author"
        />

    <TextView
        android:id="@+id/review_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_author"
        android:textSize="16sp"
        android:hint="@string/hint_review_time"
        />

    <RatingBar
        android:id="@+id/review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_time"
        android:layout_marginTop="16dp"
        android:numStars="5"
        style="?android:attr/ratingBarStyleSmall"
        />

    <TextView
        android:id="@+id/review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_rating"
        android:textSize="16sp"
        android:hint="@string/hint_review_text"
        />

</RelativeLayout>